creusot/tests/should_fail/prusti/match/lifetimes.stderr
error[creusot]: function was supposed to return data with home/lifetime `'b` but it is returning data with home/lifetime `{'a|'b}`
 --> lifetimes.rs:4:1
  |
4 | #[logic(('x) -> 'x)]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `::creusot_contracts::logic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

